# enhanced-mem-vector-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  BRANCH_CLEANUP_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  COOLIFY_DEPLOYMENT_GUIDE.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  LICENSE  README.md  chainlit.md  chainlit.yaml  deploy-to-coolify.sh  docker-compose.coolify.yml  docker-compose.dev.yml  pyproject.toml  requirements.txt  run_ui.py  setup.py
docs/dev_docs/: IMPLEMENTATION_PROGRESS.md  LINTING_SUMMARY.md  PACKAGE_UPDATES.md
emvr/: README.md  __init__.py
emvr/agent/: __init__.py  base.py  memory_agent.py
emvr/agent/supervisor/: README.md  __init__.py  base.py  workers.py
emvr/agent/workflows/: README.md  __init__.py  agent_workflow.py  factory.py
emvr/agents/: __init__.py  orchestration.py
emvr/agents/base/: __init__.py  agent.py
emvr/agents/supervisors/: __init__.py  supervisor.py
emvr/agents/tools/: __init__.py  ingestion_tools.py  memory_tools.py  retrieval_tools.py
emvr/agents/workers/: __init__.py  specialized.py  worker.py
emvr/config/: __init__.py  settings.py
emvr/core/: __init__.py  db_connections.py  embedding.py
emvr/deployment/: .env.example  Makefile  README.md  docker-compose.yml  setup_local.sh
emvr/deployment/dockerfiles/: chainlit-ui.Dockerfile  mcp-server.Dockerfile
emvr/deployment/monitoring/grafana/provisioning/dashboards/: dashboard.yml  emvr-system-overview.json
emvr/deployment/monitoring/prometheus/: prometheus.yml
emvr/deployment/scripts/: backup.sh  generate_token.py  restore.sh
emvr/deployment/security/: rbac.json
emvr/ingestion/: __init__.py  base.py  pipeline.py
emvr/ingestion/loaders/: __init__.py  file_loaders.py  web_loaders.py
emvr/mcp_server/: Dockerfile.dev  README.md  __init__.py  endpoints.py  register.py  server.py
emvr/mcp_server/endpoints/: __init__.py  agent_endpoints.py  ingestion_endpoints.py  retrieval_endpoints.py
emvr/mcp_server/middleware/: auth.py
emvr/mcp_server/monitoring/: prometheus.py
emvr/memory/: base.py  graph_store.py  memory_manager.py  vector_store.py
emvr/retrieval/: __init__.py  base.py  fusion_retriever.py  hybrid_retriever.py  knowledge_graph_retriever.py  pipeline.py
emvr/retrievers/: README.md  __init__.py  graph_retriever.py  hybrid_retriever.py  retrieval_pipeline.py
emvr/ui/: __init__.py  app.py  run.py
emvr/ui/components/: __init__.py  file_upload.py  graph_visualizer.py  search.py  user_profile.py
scripts/: run_memory_update.sh  setup.sh  update_memory.py
tests/: __init__.py  conftest.py  test_basic.py  test_mcp_server.py
